# mpdelta

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: clippy.yml  pages_doc.yml  rustfmt_check.yml  rustfmt_main.yml  test.yml  (+1 more)
core/: Cargo.toml
mpdelta/: Cargo.toml
mpdelta/src/: main.rs
mpdelta_audio_mixer/: Cargo.toml
mpdelta_audio_mixer/src/: lib.rs
mpdelta_build_utils/rust_gpu_builder/: Cargo.toml  rust-toolchain
mpdelta_build_utils/rust_gpu_builder/src/: main.rs
mpdelta_common/mpdelta_ffmpeg/: Cargo.toml  build.rs
mpdelta_common/mpdelta_ffmpeg/src/: codec.rs  io.rs  lib.rs
mpdelta_common/mpdelta_ffmpeg/src/io/: input.rs  output.rs
mpdelta_common/mpdelta_message_router/: Cargo.toml
mpdelta_common/mpdelta_message_router/src/: handler.rs  lib.rs  static_cow.rs
mpdelta_common/mpdelta_message_router/src/handler/: async_function.rs  empty.rs  filter.rs  filter_map.rs  function.rs  map.rs  multiple.rs  then.rs
mpdelta_components/: Cargo.toml  build.rs
mpdelta_components/common/: Cargo.toml
mpdelta_components/common/src/: color.rs
mpdelta_components/multimedia_loader/: Cargo.toml
mpdelta_components/multimedia_loader/src/: lib.rs  media_loader.rs
mpdelta_components/parameters/: Cargo.toml
mpdelta_components/rectangle/: Cargo.toml
mpdelta_components/rectangle/src/: lib.rs
mpdelta_components/shaders/font_rendering/: Cargo.toml
mpdelta_components/shaders/font_rendering/src/: lib.rs
mpdelta_components/sine_audio/: Cargo.toml
mpdelta_components/src/: lib.rs  multimedia_loader.rs  rectangle.rs  sine_audio.rs  text_renderer.rs
mpdelta_components/src/common/: color.rs
mpdelta_components/src/multimedia_loader/: decode_test_audio.flac  media_loader.rs
mpdelta_components/src/parameter/: file_reader.rs
mpdelta_components/src/text_renderer/: rich_text.rs  shaping.rs
mpdelta_components/text_renderer/: Cargo.toml  build.rs
mpdelta_components/text_renderer/shader/: Cargo.toml
mpdelta_components/text_renderer/shader/src/: lib.rs
mpdelta_components/text_renderer/src/: lib.rs  shaping.rs
mpdelta_core/: Cargo.toml
mpdelta_core/src/: common.rs  core.rs  edit.rs  lib.rs  project.rs  ptr.rs  time.rs  usecase.rs
mpdelta_core/src/common/: abstract_slice.rs  mapped_slice.rs  mixed_fraction.rs  time_split_value.rs  time_split_value_persistent.rs
mpdelta_core/src/common/mixed_fraction/: atomic.rs
mpdelta_core/src/component/: class.rs  instance.rs  link.rs  marker_pin.rs  parameter.rs  processor.rs
mpdelta_core/src/component/parameter/: placeholder.rs  value.rs
mpdelta_core/src/native/: processor.rs
mpdelta_core_audio/: Cargo.toml
mpdelta_core_test_util/: Cargo.toml
mpdelta_core_vulkano/: Cargo.toml
mpdelta_differential/: Cargo.toml
mpdelta_differential/src/: lib.rs
mpdelta_dyn_usecase/: Cargo.toml
mpdelta_dyn_usecase/src/: lib.rs
mpdelta_gui/: Cargo.toml
mpdelta_gui/fonts/BIZ_UDPGothic/: OFL.txt
mpdelta_gui/src/: edit_funnel.rs  global_ui_state.rs  lib.rs  message_router.rs  view.rs  view_model_util.rs  viewmodel.rs
mpdelta_gui/src/message_router/: handler.rs  static_cow.rs
mpdelta_gui/src/message_router/handler/: async_function.rs  empty.rs  filter.rs  filter_map.rs  function.rs  map.rs  multiple.rs  then.rs
mpdelta_gui/src/preview/: view.rs  viewmodel.rs
mpdelta_gui/src/property_window/: view.rs  viewmodel.rs
mpdelta_gui/src/property_window/view/: widgets.rs
mpdelta_gui/src/property_window/view/widgets/: editable_easing_value.rs  editable_easing_value_f64.rs  editable_easing_value_string.rs
mpdelta_gui/src/timeline/: view.rs  viewmodel.rs
mpdelta_gui/src/timeline/view/: range_max.rs  widgets.rs
mpdelta_gui/src/timeline/view/widgets/: component_instance_block.rs
mpdelta_gui_audio_player_cpal/: Cargo.toml
mpdelta_gui_audio_player_cpal/src/: lib.rs  signal_queue.rs
mpdelta_gui_audio_player_cpal/src/signal_queue/: split_ownership_array.rs
mpdelta_gui_hot_reload/: Cargo.toml
mpdelta_gui_hot_reload/mpdelta_gui_hot_reload_lib/: Cargo.toml
mpdelta_gui_hot_reload/mpdelta_gui_hot_reload_lib/src/: dyn_trait.rs  lib.rs
mpdelta_gui_hot_reload/src/: main.rs
mpdelta_gui_vulkano/: Cargo.toml
mpdelta_gui_vulkano/src/: lib.rs
mpdelta_gui_wgpu/: Cargo.toml
mpdelta_gui_wgpu/src/: lib.rs
mpdelta_multimedia/: Cargo.toml
mpdelta_multimedia_encoder_ffmpeg/: Cargo.toml
mpdelta_multimedia_encoder_ffmpeg/src/: lib.rs
mpdelta_processor_cache_moka/: Cargo.toml
mpdelta_project_serialize/: Cargo.toml
mpdelta_project_serialize/src/: lib.rs  serde_v0.rs
mpdelta_project_serialize/src/serde_v0/: proptest.rs
mpdelta_renderer/: Cargo.toml
mpdelta_renderer/src/: cell_by_need.rs  cloneable_iterator.rs  evaluate_component.rs  heartbeat.rs  invalidate_range.rs  lazy_init.rs  lib.rs  render.rs  tests.rs  thread_cancel.rs  time_stretch.rs
mpdelta_renderer/src/render/: component_validity.rs  evaluate_parameter.rs
mpdelta_renderer_v2/: Cargo.toml
mpdelta_rendering_controller/: Cargo.toml
mpdelta_rendering_controller/src/: lib.rs
mpdelta_services/: Cargo.toml
mpdelta_services/src/: component_class_loader.rs  easing_loader.rs  history.rs  id_generator.rs  lib.rs  project_editor.rs  project_io.rs  project_store.rs  service.rs  value_manager_loader.rs
mpdelta_services/src/project_editor/: tests.rs
mpdelta_services/src/project_editor/dsa/: union_find.rs
mpdelta_video_renderer_vulkano/: Cargo.toml  build.rs
mpdelta_video_renderer_vulkano/shaders/composite_operation/: Cargo.toml  rust-toolchain
mpdelta_video_renderer_vulkano/shaders/composite_operation/src/: lib.rs
mpdelta_video_renderer_vulkano/shaders/composite_operation_shader/: Cargo.toml
mpdelta_video_renderer_vulkano/shaders/composite_operation_shader/src/: lib.rs
mpdelta_video_renderer_vulkano/shaders/texture_drawing/: Cargo.toml
mpdelta_video_renderer_vulkano/shaders/texture_drawing/src/: lib.rs
mpdelta_video_renderer_vulkano/shaders/texture_drawing_shader/: Cargo.toml
mpdelta_video_renderer_vulkano/shaders/texture_drawing_shader/src/: lib.rs
mpdelta_video_renderer_vulkano/src/: lib.rs
src/: main.rs
(+36 files in other folders)
