[package]
name = "mpdelta"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
default-run = "mpdelta"

[workspace]
members = [
    ".",
    "mpdelta_audio_mixer",
    "mpdelta_build_utils/rust_gpu_builder",
    "mpdelta_build_utils/shader_builder",
    "mpdelta_common/mpdelta_async_runtime",
    "mpdelta_common/mpdelta_dsp",
    "mpdelta_common/mpdelta_ffmpeg",
    "mpdelta_common/mpdelta_message_router",
    "mpdelta_components",
    "mpdelta_components/shaders/font_rendering",
    "mpdelta_core",
    "mpdelta_core_audio",
    "mpdelta_core_test_util",
    "mpdelta_core_vulkano",
    "mpdelta_differential",
    "mpdelta_gui",
    "mpdelta_gui_audio_player_cpal",
    "mpdelta_gui_wgpu",
    "mpdelta_multimedia",
    "mpdelta_multimedia_encoder_ffmpeg",
    "mpdelta_project_serialize",
    "mpdelta_renderer",
    "mpdelta_rendering_controller",
    "mpdelta_services",
    "mpdelta_video_renderer_vulkano",
    "mpdelta_video_renderer_vulkano/shaders/composite_operation",
    "mpdelta_video_renderer_vulkano/shaders/texture_drawing",
]
default-members = [
    ".",
    "mpdelta_audio_mixer",
    "mpdelta_build_utils/shader_builder",
    "mpdelta_common/mpdelta_async_runtime",
    "mpdelta_common/mpdelta_dsp",
    "mpdelta_common/mpdelta_ffmpeg",
    "mpdelta_common/mpdelta_message_router",
    "mpdelta_components",
    "mpdelta_core",
    "mpdelta_core_audio",
    "mpdelta_core_test_util",
    "mpdelta_core_vulkano",
    "mpdelta_differential",
    "mpdelta_gui",
    "mpdelta_gui_audio_player_cpal",
    "mpdelta_gui_wgpu",
    "mpdelta_multimedia",
    "mpdelta_multimedia_encoder_ffmpeg",
    "mpdelta_project_serialize",
    "mpdelta_services",
    "mpdelta_renderer",
    "mpdelta_rendering_controller",
    "mpdelta_video_renderer_vulkano",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["White-Green"]

[workspace.dependencies]
arc-swap = "1.7.1"
arrayvec = { version = "0.7.6", default-features = false }
ash = { version = "0.37.3", features = ["linked"] }
assert_matches = "1.5.0"
async-trait = "0.1.83"
bitflags = "2.6.0"
bytemuck = "1.19.0"
bytemuck_derive = "1.8.0"
cgmath = { version = "0.18.0", features = ["serde"] }
ciborium = "0.2.2"
cpal = "0.15.3"
crossbeam-queue = { version = "0.3.11" }
crossbeam-utils = { version = "0.8.20", default-features = false }
dashmap = "6.1.0"
dyn-eq = { version = "0.1.3", default-features = false }
dyn-hash = "0.2.0"
eframe = { version = "0.28.1", features = ["wgpu"] }
egui = { version = "0.28.1", default-features = false }
egui_image_renderer = { git = "https://github.com/White-Green/egui_image_renderer", rev = "0b9297ac24fccd58cbedcd2863e06f2fa4a2f880" }
egui-wgpu = { version = "0.28.1" }
erased-serde = { version = "0.4.5", features = ["alloc"], default-features = false }
ffmpeg-next = { version = "=7.0.4", default-features = false, features = ["format", "software-resampling", "software-scaling"] }
ffmpeg-sys-next = { version = "=7.0.2", default-features = false, features = ["static"] }
font-kit = "0.14.2"
futures = { version = "0.3.31", default-features = false }
glam = { version = "0.24.2", features = ["libm"], default-features = false }
hound = "3.5.1"
icu_properties = "1.5.1"
icu_segmenter = "1.5.0"
image = { version = "0.25.2", features = ["png"], default-features = false }
indexmap = "2.6.0"
lyon_tessellation = { version = "1.0.15", default-features = false }
memmap2 = "0.9.5"
moka = { version = "0.12.8", features = ["future"], default-features = false }
mpdelta_async_runtime = { path = "mpdelta_common/mpdelta_async_runtime" }
mpdelta_audio_mixer = { path = "mpdelta_audio_mixer" }
mpdelta_components = { path = "mpdelta_components" }
mpdelta_core = { path = "mpdelta_core" }
mpdelta_core_audio = { path = "mpdelta_core_audio" }
mpdelta_core_test_util = { path = "mpdelta_core_test_util" }
mpdelta_core_vulkano = { path = "mpdelta_core_vulkano" }
mpdelta_differential = { path = "mpdelta_differential" }
mpdelta_dsp = { path = "mpdelta_common/mpdelta_dsp" }
mpdelta_ffmpeg = { path = "mpdelta_common/mpdelta_ffmpeg" }
mpdelta_gui = { path = "mpdelta_gui" }
mpdelta_gui_audio_player_cpal = { path = "mpdelta_gui_audio_player_cpal" }
mpdelta_gui_wgpu = { path = "mpdelta_gui_wgpu" }
mpdelta_message_router = { path = "mpdelta_common/mpdelta_message_router" }
mpdelta_multimedia = { path = "mpdelta_multimedia" }
mpdelta_multimedia_encoder_ffmpeg = { path = "mpdelta_multimedia_encoder_ffmpeg" }
mpdelta_project_serialize = { path = "mpdelta_project_serialize" }
mpdelta_renderer = { path = "mpdelta_renderer" }
mpdelta_rendering_controller = { path = "mpdelta_rendering_controller" }
mpdelta_services = { path = "mpdelta_services" }
mpdelta_video_renderer_vulkano = { path = "mpdelta_video_renderer_vulkano" }
nalgebra = { version = "0.33.0", features = ["sparse", "std"], default-features = false }
num = { version = "0.4.3", default-features = false }
ordered-float = { version = "4.3.0", default-features = false }
phf = { version = "0.11.2", features = ["macros"], default-features = false }
proptest = { version = "1.5.0", features = ["std"], default-features = false }
proptest-derive = "0.5.0"
rayon = "1.10.0"
regex = "1.11.0"
rfd = { version = "0.15.0", features = ["file-handle-inner", "gtk3"], default-features = false }
rpds = { git = "https://github.com/White-Green/rpds", rev = "5d99c47f2a3ca2084ad85e66cbe37010191e853a", default-features = false }
serde = { version = "1.0.210", default-features = false }
serde_repr = "0.1.19"
serde_json = "1.0.128"
shader_builder = { path = "mpdelta_build_utils/shader_builder" }
smallvec = "1.13"
spirv-builder = { version = "0.9.0", default-features = false, features = ["use-compiled-tools"] }
spirv-std = "0.9.0"
swash = { version = "0.1.19", features = ["scale"], default-features = false }
thiserror = "1.0.64"
time = "0.3.36"
tokio = { version = "1.40.0", features = ["fs", "macros", "time"] }
uuid = { version = "1.10.0", default-features = false }
vulkano = { version = "0.34.1", default-features = false }
vulkano-util = "0.34.1"
vulkano-win = "0.34.0"
wgpu = { version = "0.20.1", default-features = false, features = ["vulkan-portability", "wgc"] }
winit = { version = "0.29.15", default-features = false }

[patch.crates-io]
egui = { git = "https://github.com/White-Green/egui", rev = "02784f706ea8db6dc33126201ff69ea34fc71589" }
egui-wgpu = { git = "https://github.com/White-Green/egui", rev = "02784f706ea8db6dc33126201ff69ea34fc71589" }
emath = { git = "https://github.com/White-Green/egui", rev = "02784f706ea8db6dc33126201ff69ea34fc71589" }
epaint = { git = "https://github.com/White-Green/egui", rev = "02784f706ea8db6dc33126201ff69ea34fc71589" }
ffmpeg-sys-next = { git = "https://github.com/White-Green/rust-ffmpeg-sys", branch = "ffmpeg7" }

[dependencies]
ash = { workspace = true }
async-trait = { workspace = true }
cpal = { workspace = true }
futures = { workspace = true }
mpdelta_async_runtime = { workspace = true, features = ["tokio"] }
mpdelta_audio_mixer = { workspace = true }
mpdelta_components = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_audio = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
mpdelta_gui = { workspace = true }
mpdelta_gui_audio_player_cpal = { workspace = true }
mpdelta_gui_wgpu = { workspace = true }
mpdelta_multimedia_encoder_ffmpeg = { workspace = true }
mpdelta_project_serialize = { workspace = true }
mpdelta_renderer = { workspace = true }
mpdelta_rendering_controller = { workspace = true }
mpdelta_services = { workspace = true }
mpdelta_video_renderer_vulkano = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
vulkano = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }

[profile.dev]
opt-level = 3
incremental = false

[profile.release]
incremental = false
