[package]
name = "mpdelta"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
ash = { workspace = true }
async-trait = { workspace = true }
cpal = { workspace = true }
futures = { workspace = true }
mpdelta_async_runtime = { workspace = true, features = ["tokio"] }
mpdelta_audio_mixer = { workspace = true }
mpdelta_components = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_audio = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
mpdelta_gui = { workspace = true }
mpdelta_gui_audio_player_cpal = { workspace = true }
mpdelta_gui_wgpu = { workspace = true }
mpdelta_multimedia_encoder_ffmpeg = { workspace = true }
mpdelta_project_serialize = { workspace = true }
mpdelta_renderer = { workspace = true }
mpdelta_rendering_controller = { workspace = true }
mpdelta_services = { workspace = true }
mpdelta_video_renderer_vulkano = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
vulkano = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
