[package]
name = "mpdelta_audio_mixer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
[dependencies]
mpdelta_core = { workspace = true }
mpdelta_core_audio = { workspace = true }
mpdelta_dsp = { workspace = true }
mpdelta_renderer = { workspace = true }
