[package]
name = "mpdelta_audio_mixer"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
mpdelta_core = { workspace = true }
mpdelta_core_audio = { workspace = true }
mpdelta_dsp = { workspace = true }
mpdelta_renderer = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
mpdelta_core_test_util = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
