[package]
name = "mpdelta_components"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
[dependencies]
async-trait = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_audio = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
qcell = { workspace = true }
tokio = { workspace = true }
vulkano = { workspace = true }
