[package]
name = "mpdelta_components"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
arrayvec = { workspace = true }
async-trait = { workspace = true }
crossbeam-queue = { workspace = true }
erased-serde = { workspace = true }
ffmpeg-next = { workspace = true }
ffmpeg-sys-next = { workspace = true }
image = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_audio = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
mpdelta_ffmpeg = { workspace = true }
num = { workspace = true }
qcell = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true, features = ["v5"] }
vulkano = { workspace = true }

[dev-dependencies]
wav = { workspace = true }
