[package]
name = "mpdelta_core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
async-trait = { workspace = true }
cgmath = { workspace = true }
either = { workspace = true }
futures = { workspace = true }
num = { workspace = true }
qcell = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
