[package]
name = "mpdelta_core"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
async-trait = { workspace = true }
cgmath = { workspace = true }
dyn-eq = { workspace = true }
dyn-hash = { workspace = true }
erased-serde = { workspace = true }
futures = { workspace = true }
num = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
qcell = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[features]
proptest = ["dep:proptest", "dep:proptest-derive"]
