[package]
name = "mpdelta_differential"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
mpdelta_core = { workspace = true }
nalgebra = { workspace = true }
qcell = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mpdelta_core_test_util = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
uuid = { workspace = true }
