[package]
name = "mpdelta_dyn_usecase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
mpdelta_core = { workspace = true }
qcell = { workspace = true }
tokio = { workspace = true }
