[package]
name = "mpdelta_dyn_usecase"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
mpdelta_core = { workspace = true }
qcell = { workspace = true }
tokio = { workspace = true }
