[package]
name = "mpdelta_gui"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
arc-swap = { workspace = true }
cgmath = { workspace = true }
egui = { workspace = true }
futures = { workspace = true }
mpdelta_async_runtime = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_multimedia = { workspace = true }
once_cell = { workspace = true }
qcell = { workspace = true }
regex = { workspace = true }
rfd = { workspace = true }
tokio = { workspace = true }
