[package]
name = "mpdelta_gui"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
arc-swap = { workspace = true }
cgmath = { workspace = true }
crossbeam-utils = { workspace = true }
egui = { workspace = true }
futures = { workspace = true }
glam = { workspace = true }
mpdelta_async_runtime = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_message_router = { workspace = true }
mpdelta_multimedia = { workspace = true }
ordered-float = { workspace = true }
rfd = { workspace = true }
rpds = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
egui_image_renderer = { workspace = true }
mpdelta_async_runtime = { workspace = true, features = ["tokio"] }
mpdelta_core_test_util = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
