[package]
name = "mpdelta_gui_audio_player_cpal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = { workspace = true }
crossbeam-queue = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_audio = { workspace = true }
mpdelta_dsp = { workspace = true }
mpdelta_gui = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
