[package]
name = "mpdelta_gui_audio_player_cpal"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
[dependencies]
cpal = { workspace = true }
crossbeam-queue = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_audio = { workspace = true }
mpdelta_dsp = { workspace = true }
mpdelta_gui = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
