[package]
name = "mpdelta_gui_hot_reload"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
[dependencies]
async-trait = { workspace = true }
cpal = { workspace = true }
egui = { workspace = true }
hot-lib-reloader = { workspace = true }
mpdelta_async_runtime = { workspace = true, features = ["tokio"] }
mpdelta_audio_mixer = { workspace = true }
mpdelta_components = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_audio = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
mpdelta_dyn_usecase = { workspace = true }
mpdelta_gui = { workspace = true }
mpdelta_gui_audio_player_cpal = { workspace = true }
mpdelta_gui_hot_reload_lib = { path = "./mpdelta_gui_hot_reload_lib" }
mpdelta_gui_vulkano = { workspace = true }
mpdelta_renderer = { workspace = true }
mpdelta_rendering_controller = { workspace = true }
mpdelta_services = { workspace = true }
mpdelta_video_renderer_vulkano = { workspace = true }
notify = { workspace = true }
qcell = { workspace = true }
tokio = { workspace = true }
vulkano = { workspace = true }
vulkano-util = { workspace = true }
vulkano-win = { workspace = true }
winit = { workspace = true }
