[package]
name = "mpdelta_gui_vulkano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpdelta_core_vulkano = { path = "../mpdelta_core_vulkano" }
mpdelta_gui = { path = "../mpdelta_gui" }
egui = "0.18.1"
egui_winit_vulkano = "0.19.0"
egui-winit = "0.18.0"
vulkano = "0.30.0"
winit = "0.26.0"
take_mut = "0.2.2"
