[package]
name = "mpdelta_gui_vulkano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { workspace = true }
egui_winit_vulkano = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
mpdelta_gui = { workspace = true }
take_mut = { workspace = true }
vulkano = { workspace = true }
winit = { workspace = true }
