[package]
name = "mpdelta_gui_vulkano"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
egui = { workspace = true }
egui_winit_vulkano = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
mpdelta_gui = { workspace = true }
vulkano = { workspace = true }
vulkano-util = { workspace = true }
winit = { workspace = true }
