[package]
name = "mpdelta_multimedia_encoder_ffmpeg"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { workspace = true }
ffmpeg-next = { workspace = true }
indexmap = { workspace = true }
mpdelta_core = { workspace = true }
mpdelta_core_audio = { workspace = true }
mpdelta_core_vulkano = { workspace = true }
mpdelta_dsp = { workspace = true }
mpdelta_ffmpeg = { workspace = true }
mpdelta_multimedia = { workspace = true }
mpdelta_renderer = { workspace = true }
thiserror = { workspace = true }
vulkano = { workspace = true }
vulkano-util = { workspace = true }
