[package]
name = "mpdelta_project_serialize"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
cgmath = { workspace = true }
ciborium = { workspace = true }
erased-serde = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
mpdelta_core = { workspace = true }
mpdelta_differential = { workspace = true }
qcell = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
mpdelta_core = { workspace = true, features = ["proptest"] }
proptest = { workspace = true }
proptest-derive = { workspace = true }
